--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,10 @@
     <%= render 'layouts/shim' %>
   </head>
   <body>
-    <%= render 'layouts/header' %>
+    <%= render 'layouts/header' %>g
     <div class="container">
       <%= yield %>
       <%= render 'layouts/footer' %>
     </div>
   </body>
-</html>
+</html>g
